# local-deep-researcher

./: .env.example  .gitignore  Dockerfile  README.md  justfile  langgraph.json  pyproject.toml
.github/workflows/: claude-code-review.yml  docker-image.yml
examples/: ag2_multiagent_research.py
src/gemini_deep_researcher/: configuration.py  graph.py
src/ollama_deep_researcher/: configuration.py  graph.py  prompts.py  state.py  utils.py
src/ollama_deep_researcher/api/: __init__.py  logger.py  main.py  models.py
tests/: README.md  conftest.py  test_crw_search.py  test_exa_search.py  test_route_research.py
tests/fixtures/: mock_responses.py
tests/intg/: test_api_integration.py
tests/unit/: test_api.py  test_configuration.py  test_graph_nodes.py  test_state.py
